= Next Release: entr-2.8

 - Changed function pointer prefixes from '_' to 'x' to avoid runtime symbol
   collisions in libc. Required to build on DragonFlyBSD
 - Added this NEWS file to provide detailed release history for port maintainers
 - Using the argument '/_' on the command line is now replaced with the first
   file that changed
 - Man page formatted with more semanticlly correct markup

= Release History

== 2.6: January 23, 2014

 - Added -c option to clear the screen before calling execvp(3)
 - Changed command line option '{}' to '/_'
 - Renamed Makefile.linux-lbsd to Makefile.debian
 - Include CPPFLAGS since some build systems (namely Debian) use it to specify
   hardening options
 - Raise ARG_MAX from 4K to 2MB on Linux, since _SC_ARG_MAX returns an incorrect
   value on Linux
 - Handle RENAME events that are not followed by DELETE. This enables us to cope
   with the backup option in Vim.

== 2.5: December 30, 2013

 - Restore full 50ms period for consolidating events on Linux. Required for the
   Geany editor
 - Remove use of setproctitle(3), no plans to implement this on Linux and MacOS.
   This also eliminates use of the 3-clause license
 - New feature: the first occurrence of '{}' on the command line will be
   replaced with the name of the first file under watch
 - Set PAGER to an absolute path (/bin/cat)
 - Prevent interactive utilities from paging output

== 2.4: December 18, 2013

 - Reintroduce ${DESTDIR} for STAGEDIR installation on FreeBSD and pkgsrc
 - License file describes the copyright holders for the compatibility libraries

== 2.3: December 12, 2013

 - Wait for processes to terminate in restart mode
 - Set process title for blocking events
 - Correct multiple bugs in the inotify->kqueue translation layer
 - Print out detailed instructions if the user provides configure arguments
 - Remove ${DESTDIR} from Makefile which appears to interfere with OpenBSD ports